// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 isKstA"
    id="Field"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field Name
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <div />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 isKstA"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cTIowo"
      id="Edge-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Edge-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 gHWRdT"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 ddZSbO"
      id="Vertically-Aligned"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Vertically-Aligned
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 isKstA"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fNdZbj"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (2x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gVApvo"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (3x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 cJlYYe"
      id="4x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field Label (4x)
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div />
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 kzIWqC"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kcekYP"
      id="Default"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Small Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 isKstA"
      id="2x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Default Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 eyCMFE"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Large Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 dPaFQM"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fUVnJH"
      id="3x"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 jDDxND Field__FieldLabel-sc-11od8ug-2 ikKNKi"
        cursor="pointer"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        2XL Field
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK Field__FieldValue-sc-11od8ug-3 hpzdxa"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Field Value
      </p>
    </section>
  </section>
  <div />
</section>
`;
